--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "php": ">=7.2.0",
     "illuminate/support": "~5.5",
-    "webappid/laravel-ddd": "1.0.1"
+    "webappid/laravel-ddd": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "7.2.6",
