--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   },
   "require": {
     "php": ">=7.2.0",
-    "illuminate/support": "~5.5",
+    "illuminate/support": "5.5.*|6.*",
     "webappid/laravel-ddd": "^1.0"
   },
   "require-dev": {
